<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/maptype"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_data"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:text="@string/method"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_network"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/id_gps"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:text="@string/provider_gps"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/id_latitude"
        android:background="@color/black"
        android:textColor="#808080"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="@string/latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_data" />

    <TextView
        android:id="@+id/id_longitude"
        android:background="@color/black"
        android:textColor="#808080"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:text="@string/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_latitude" />

    <TextView
        android:id="@+id/id_network"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:text="@string/provider_network"
        android:textColor="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_gps" />

    <ImageView
        android:id="@+id/compass"
        android:layout_centerInParent="true"
        android:layout_width="161dp"
        android:layout_height="195dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />
</androidx.constraintlayout.widget.ConstraintLayout>